the system can now create users and store them in the db

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^5.0.0",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "@types/express-handlebars": "^6.0.0"
   }
 }
